--- a/shopping/shopping/src/main/resources/templates/Admin/Items/ItemCategory.html
+++ b/shopping/shopping/src/main/resources/templates/Admin/Items/ItemCategory.html
@@ -67,7 +67,7 @@
                         <td>
                             <input type="text" name="code" id="code" class="code" value="none" readonly>
                             <input type="text" name="category_name" id="category_name" class="category_name" placeholder="카테고리 이름">
-                            <input type="button" class="btn btn-secondary" value="등록" style="vertical-align:top; height:40px; font-weight:bold;">
+                            <input type="submit" class="btn btn-secondary" value="등록" style="vertical-align:top; height:40px; font-weight:bold;">
                         </td>
                     </tr>
                 </table>
