--- a/shopping/shopping/src/main/resources/static/css/Items/ItemList.css
+++ b/shopping/shopping/src/main/resources/static/css/Items/ItemList.css
@@ -3,16 +3,11 @@
 {
     text-align:center;
     margin:50px 630px;
-    width:700px;
-    border:1px solid;
+    width:60%;
 }
 tr td
 {
     border:1px solid;
-}
-.list_title
-{
-    text-decoration : underline;
 }
 .list_check
 {
