--- a/shopping/shopping/src/main/resources/static/css/UserLIst.css
+++ b/shopping/shopping/src/main/resources/static/css/UserLIst.css
@@ -1,15 +1,11 @@
 <style>
 /* UserList Start */
-.users_title
-{
-    text-decoration:underline;
-    text-align:center;
-}
 .user_check, .user_gender
 {
     width:50px;
     font-weight:bold;
     text-align:center;
+    font-size:20px;
 }
 
 .user_name
@@ -17,6 +13,7 @@
     width:100px;
     font-weight:bold;
     text-align:center;
+    font-size:20px;
 }
 
 .user_date, .user_phone
@@ -24,6 +21,7 @@
     width:200px;
     font-weight:bold;
     text-align:center;
+    font-size:20px;
 }
 
 .user_check_, .user_gender_, .user_name_, .user_date_, .user_phone_
