--- a/shopping/shopping/src/main/resources/templates/Admin/Items/ItemList.html
+++ b/shopping/shopping/src/main/resources/templates/Admin/Items/ItemList.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <meta charset="UTF-8">
-    <title>ItemList</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <title>ItemList</title>
 </head>
 
 <th:block th:replace="~{../static/css/home/top.css}"></th:block>
@@ -19,30 +20,30 @@
     <table class="ItemList_table">
 
         <tr>
-            <td colspan="5" class="list_title">
-                <span style="font-weight:bold; font-size:40px;">Items</span>
+            <td colspan="5" style="text-align:center;">
+                <h2>Items List</h2>
+                <br>
             </td>
         </tr>
 
         <tr>
             <td colspan="5">
-                <select name="category1" id="category1" onchange="set_category2(this.value)">
-                    <option value="none">선택</option>
+                <select name="category1" id="category1" onchange="set_category2(this.value)" class="form-select" aria-label="Default select example" style="width:20%; text-align:center; float:left;">
+                    <option value="none" selected>선택</option>
                     <th:block th:each="first : ${first}">
                         <option th:text="${first.category_name}"
                                 th:value="${first.code}">
                         </option>
                     </th:block>
                 </select>
-                &emsp;&emsp;
-                <select name="category2" id="category2" onchange="set_category3(this.value)">
-                    <option value="none">선택</option>
-                </select>
-                &emsp;&emsp;
-                <select name="category3" id="category3">
+                &emsp;
+                <select name="category2" id="category2" onchange="set_category3(this.value)" class="form-select" aria-label="Default select example" style="width:20%; text-align:center; float:left;">
                     <option value="none">선택</option>
                 </select>
                 &emsp;
+                <select name="category3" id="category3" class="form-select" aria-label="Default select example" style="width:20%; text-align:center; float:left;">
+                    <option value="none">선택</option>
+                </select>
                 &emsp;
                 <input type="text" name="keyword" id="keyword" style="width:100px;">
                 <input type="button" value="검색" onclick="search_item()">
